--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Analog CLock</title>
 </head>
+    <body>
+        Dhanraj Patil
+    </body>
 
 </html>
